# novoross_society

./: Makefile  README.md  db.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt
file_storage/: admin.py  apps.py  models.py
file_storage/migrations/: 0001_initial.py  0002_alter_filestorage_options_remove_filestorage_slug.py
logs/: debug.json
society_conf/: asgi.py  settings.py  urls.py  wsgi.py
society_main/: admin.py  apps.py  forms.py  logging.py  models.py  sitemaps.py  urls.py  views.py
society_main/migrations/: 0001_initial.py  0002_contactformmodel_time_create_and_more.py  0002_tagpost_post_tags.py  0003_alter_contactformmodel_email_and_more.py  0003_category_alter_post_slug.py  0003_contactformmodel_checkbox.py  0004_contactformmodel_checkbox.py  0005_alter_contactformmodel_options_post_video_and_more.py  0005_video_alter_contactformmodel_options_and_more.py  0006_post_description.py  0007_contactformmodel_ip_address.py  0008_alter_tagpost_options.py  0009_alter_post_content.py
society_main/services/: email.py  utils.py
society_main/static/css/: style.css
society_main/static/society_main/: manifest.json 
society_main/static/society_main/css/: sidebar.css  style.css
society_main/static/society_main/js/: fontawesome.js  form.js  my.js
society_main/templates/society_main/: 1.html  2.html  about.html  base.html  contacts.html  index.html  list_categories.html  list_tags.html  news.html  policy.html  post.html
society_main/templates/society_main/components/: dashboard.html  footer.html  (+4 more)
society_main/templatetags/: society_main_tags.py
(+2 files in other folders)
