[tool.poetry]
name = "novoross-society"
version = "0.1.0"
description = "A project of the Novorossiysk Society for the Disabled"
authors = ["SergeiNaum <sergei.naumencko@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.1"
django-debug-toolbar = "^4.2.0"
pillow = "^10.1.0"
django-taggit = "^4.0.0"
polog = "^0.0.17"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-django = "^4.5.2"
django-extensions = "^3.2.1"
ipython = "^8.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
